--- a/paginas/Reseñas.html
+++ b/paginas/Reseñas.html
@@ -22,11 +22,11 @@
         <h1>Nuestro servicio habla por nuestros clientes!</h1>
         <section>
             <p>
-                <li>Jose776: <em>"Excelente página, el patio llego intacto en la caja"</em></li>
-                <li>Carlos892: <em>"Me compre la mitad de la bombonera, excelente servicio"</em></li>
-                <li>Tinelli8759: <em>"Excelent6e calidad de las luces, buenas noches america!"</em></li>
-                <li></li>
-                <li></li>
+                <li>Jose776: <em>"Excelente página, mi habitacion quedo hermosa"</em></li>
+                <li>Carlos892: <em>"Me comprela lampara que siempre soñe"</em></li>
+                <li>Rau8759: <em>"Excelente servicio y atencion"</em></li>
+                <li>LucasBoca: <em>"Me encanto la madera de la mesa de luz"</em></li>
+                <li>Julieta293: <em>"Encantada con el ropero"</em></li>
             </p>
         </section>
     </main>
